Update index.html fix1

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <ul>
                         <li>двухуровневое меню категорий</li>
                         <li>навигационное меню</li>
-                        <li>блок малой корзины(количество товаров и сумма)</li>
+                        <li>блок малой корзины (количество товаров и сумма)</li>
                     </ul>
                 </li>
                 <li>
@@ -181,6 +181,7 @@
                         <li>управление баннерами</li>
                     </ul>
                 </li>
+                <li>Были реализованы фикстуры данных для создания тестовых значений данных</li>
             </ol>
 
             <p><a href="http://symfony-shop.srv197676.hoster-test.ru/">Ссылка на проект</a></p>
