--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Редактор переводов</h2> 
     
             <p>В рамках данного проекта мной было разработано и реализовано веб-приложение "Редактор переводов" для 
-                моего личного использования.</p>
+                моего личного использования (мой пет-проект).</p>
     
             <p>Использованные технологии: 
                 <span class="bold">PHP 8.1.17</span>, 
